@startuml kelas
title "Kelas-Kelas di Program E-Commerce"
skinparam DefaultTextAlignment center
skinparam BackgroundColor white


class Orang {
    - id: int
    - nama: string
    - alamat: string
    - nomorTelepon: int
}
class Penjual {
    - namaToko: string
    - deskripsiToko: string
    - produkProduk: Barang{...}
}
class Pembeli {
    - id: int
    - sudahBayar: bool
    - metodeBayar: string
    - keranjang: array
}

class Barang {
    - id: int
    - name: string
    - jumlah: int
    - harga: float
    - jumlahBintang: string
    - jumlahTerjual: string
    
}
!function Transaksi() {
    if Barang(true) then (sudahBayar === true)
}
Orang --> Penjual
Orang --> Pembeli
@enduml